# qpay-py

./: .gitignore  README.md  pyproject.toml
src/mongolian_payment_qpay/: __init__.py  client.py  config.py  errors.py  types.py
tests/: test_client.py
