[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongolian-payment-qpay"
version = "1.0.0"
description = "QPay payment gateway SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "mongolian-payment" },
]
keywords = ["qpay", "payment", "mongolia", "gateway", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/mongolian-payment/qpay-py"
Repository = "https://github.com/mongolian-payment/qpay-py"
Issues = "https://github.com/mongolian-payment/qpay-py/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
